# axum_eframe_template

./: .gitignore  LICENSE  Readme.md
backend/: Cargo.toml
backend/.cargo/: config.toml
backend/src/: main.rs
frontend/: Cargo.toml  index.html
frontend/src/: app.rs  main.rs
shared_types/: Cargo.toml
shared_types/src/: lib.rs
